# BeltEngine

./: .gitignore  BeltEngine.py  GcodePostProcessor.py  MeshPretransformer.py  README.md  SettingFunction.py  SettingsParser.py  SupportMeshCreator.py  build.sh  install.sh  model.stl  output.gcode  package-lock.json  pyproject.toml  requirements.txt  setupDev.sh  test.sh
.github/workflows/: buildPackage.yml
belt_engine/: BeltEngine.py  MeshCreator.py  SettingsParser.py
belt_engine/resources/definitions/: fdmprinter.def.json
belt_engine/settings/: CR30-verttest.cfg.ini  bb_04mm.cfg.ini  blackbelt.cfg.ini  verttest.cfg.ini
github/workflows/: buildPackage.yml
resources/definitions/: beltengine.def.json
settings/: CR30.cfg.ini  bb_025mm.cfg.ini  bb_06mm.cfg.ini  bb_08mm.cfg.ini  blackbelt.cfg.ini
