[tool.poetry]
name = "belt-engine"
version = "0.1.1"
description = "A commandline slicer for belt-style printers utilising CuraEngine"
authors = ["Michael Molinari <mike@autodrop3d.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.3"
Shapely = "1.7.0"
trimesh = {extras = ["easy"], version = "^3.9.19"}
triangle = "^20200424"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
belt-engine = 'belt_engine.BeltEngine:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"